Added Events and News sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     
     <section id="events">
-        <h2>Events</h2>
+        <h2>Upcoming Events</h2>
 
         <article class="event">
             <img src="assests/bowling.jfif" alt="People Bowling">
@@ -73,7 +73,31 @@
     </section>
     
     <section id="news">
-        <p>News Spot</p>
+        <h2>Campus News</h2>
+
+        <article id="headline">
+            <img src="assests/um-osu.jfif" alt="Swining UM flag after win">
+            <h3><a href="#">Michigan Takes Down OSU 13-10!</a></h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, fugiat! Dolorem sapiente impedit perferendis temporibus non illo accusamus eligendi a fuga fugiat repellat repellendus, tempora, nulla, modi officia. Ea, ullam.</p>
+        </article>
+
+        <article class="news-article">
+            <h3><a href="#">President Ono Transfers</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, odio neque? Debitis eius, ullam ea distinctio quis minus, quam nesciunt soluta neque at eveniet quidem fuga facere nobis odit consectetur?</p>
+        </article>
+        <article class="news-article">
+            <h3><a href="#">Squirrels Fight Back Against Lack of Feeding</a></h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum neque dolorem eligendi unde exercitationem. Itaque totam expedita neque cumque soluta eligendi harum consequatur nesciunt vel accusamus, cum, dolor assumenda sint!</p>
+        </article>
+        <article class="news-article">
+            <h3><a href="#">Gaza Protests Presist and Encampment Continues</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum ex ab sapiente error eligendi ipsam vitae distinctio perspiciatis assumenda animi! Cupiditate sint est voluptates, voluptas repudiandae doloremque error natus voluptatum?</p>
+        </article>
+        <article class="news-article">
+            <h3><a href="#">New Basketball Coach Dusty May Means Buissness</a></h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati numquam est officiis omnis voluptates labore aut modi saepe, suscipit quasi quae ullam minima fugit, sunt quod quaerat quis, dolorum eum?</p>
+        </article>
+
     </section>
 
 </body>
