Added Dining Hall Section with menus and images

--- a/index.html
+++ b/index.html
@@ -100,5 +100,28 @@
 
     </section>
 
+    <section id="dining-halls">
+        <h2>Dining Halls</h2>
+
+        <article class="dining">
+            <h3>South Quad</h3>
+            <img src="assests/south-q.jfif" alt="Image of South Quad">
+            <p>Menu: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic neque nulla vel ex aperiam at esse cupiditate quia provident. Iste reiciendis eius sint. Sequi eum necessitatibus animi nulla molestiae quia?</p>
+        </article>
+
+        <article class="dining">
+            <h3>Mojo</h3>
+            <img src="assests/mojo.jfif" alt="Image of Mosher Jordan Hall">
+            <p>Menu: Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nesciunt ipsam enim tempora placeat possimus et perferendis, reiciendis dignissimos minus eaque non quas vitae. Cupiditate, sed odio. Nulla, quae praesentium.</p>
+        </article>
+
+        <article class="dining">
+            <h3>Bursley</h3>
+            <img src="assests/bursley.jfif" alt="Image of Bursley Hall">
+            <p>Menu: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae aliquid eos quis quibusdam debitis officia aliquam cupiditate temporibus eligendi excepturi dolores laudantium quo ipsam dolore, necessitatibus, pariatur sed. Molestiae, delectus.</p>
+        </article>
+        
+    </section>
+
 </body>
 </html>
