Updated Layout of event articles

--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
         <h2>Upcoming Events</h2>
 
         <article class="event">
+            <h3>Date: 8/28/25</h3>
             <img src="assests/bowling.jfif" alt="People Bowling">
             <h3><a href="#">Bowling Night</a></h3>
-            <h3>Date: 8/28/25</h3>
             <p>Time: 6pm-9pm</p>
             <p>Location: Pinball Petes</p>
         </article>
 
         <article class="event">
+            <h3>Date: 8/31/25</h3>
             <img src="assests/pool.jfif" alt="Image of Pool Party">
             <h3><a href="#">Pool Party</a></h3>
-            <h3>Date: 8/31/25</h3>
             <p>Time: 12am-3pm</p>
             <p>Location: North Campus Recreational Building</p>
         </article>
 
         <article class="event">
+            <h3>Date: 9/2/25</h3>
             <img src="assests/movie.jfif">
             <h3><a href="#">Movie Night</a></h3>
-            <h3>Date: 9/2/25</h3>
             <p>Time: 9pm-12pm</p>
             <p>Location: Diag</p>
         </article>
@@ -75,7 +75,7 @@
     <section id="news">
         <h2>Campus News</h2>
 
-        <article id="headline">
+        <article class="news-headline">
             <img src="assests/um-osu.jfif" alt="Swining UM flag after win">
             <h3><a href="#">Michigan Takes Down OSU 13-10!</a></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, fugiat! Dolorem sapiente impedit perferendis temporibus non illo accusamus eligendi a fuga fugiat repellat repellendus, tempora, nulla, modi officia. Ea, ullam.</p>
